# EigenLean

./: .gitignore  Eigen.lean  EigenLean.lean  Main.lean  lake-manifest.json  lakefile.lean  readme.md  readme.org
Eigen/: Matrix.lean  SparseMatrix.lean  SparseSolvers.lean
EigenLean/: SparseMatrix.lean
cpp/: CMakeLists.txt  CppClass.h  DenseMatrix.cpp  DenseSolvers.cpp  LDLT.cpp  SparseMatrix.cpp  SparseSolvers.cpp  compile_commands.json  ldlt.cpp  util.cpp  util.h
examples/: dense.lean  sparse.lean
